--- a/html/index.html
+++ b/html/index.html
@@ -217,6 +217,66 @@
         height: 280px;
       }
     }
+    
+
+
+@media (min-width: 600px) and (max-width: 900px) {
+  .main-text {
+    font-size: 120px;
+    line-height: 120px;
+    margin-left: -100px;
+    margin-top: 0;
+    text-align: left;
+  }
+
+  .header {
+    font-size: 20px;
+    padding: 15px 25px;
+  }
+
+  .menu a {
+    margin: 0 12px;
+    font-size: 20px;
+  }
+
+  .name {
+    font-size: 20px;
+  }
+
+  .skills-title {
+    font-size: 50px;
+  }
+
+  .divider {
+    height: 50%;
+  }
+
+  .skills-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: auto;
+    gap: 40px;
+  }
+
+  .skills-left, .skills-right {
+    flex: 1;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .skills-right {
+    font-size: 28px;
+    padding: 10px 0;
+  }
+
+  .item_container {
+    width: 350px;
+    height: 350px;
+  }
+}
+
   </style>
 </head>
 <body>
