tab-view on index test1

--- a/html/index.html
+++ b/html/index.html
@@ -202,6 +202,8 @@
         flex-direction: column;
         height: auto;
         gap: 30px;
+        justify-content: center;
+        align-items: center;
       }
 
       .skills-left,
@@ -222,9 +224,9 @@
 
 @media (min-width: 600px) and (max-width: 900px) {
   .main-text {
-    font-size: 120px;
+    font-size: 90px;
     line-height: 120px;
-    margin-left: -100px;
+    margin-left: -30px;
     margin-top: 0;
     text-align: left;
   }
@@ -256,6 +258,8 @@
     flex-wrap: wrap;
     height: auto;
     gap: 40px;
+    justify-content: center;
+    align-items: center;
   }
 
   .skills-left, .skills-right {
@@ -272,8 +276,9 @@
   }
 
   .item_container {
-    width: 350px;
-    height: 350px;
+    width: 280px;
+    height: 280px;
+   
   }
 }
 
