add-contact-content

--- a/html/index.html
+++ b/html/index.html
@@ -67,13 +67,31 @@
       
       <div class="work-container">
         <div class="work-title">MY WORK</div>
-        <div class="work-slider" style="--height:400px;--width:400px;--quantity:5">
+        <div class="work-slider" style="--height:300px;--width:300px;--quantity:5">
           <div class="slider-list">
-            <div class="item slideritem1"></div>
-            <div class="item slideritem2"></div>
-            <div class="item slideritem3"></div>
-            <div class="item slideritem4"></div>
-            <div class="item slideritem5"></div>
+            <div class="item slideritem1" style="--position:1;">
+              <div class="slider-item-container">
+                <div class="slider-item-title">Dev To</div>
+                <div class="slider-item-img"><a href=""><img src="/resources/dev_to_icon_136699.png" alt="" class="slider-item-imgsrc"></a></div>
+                <div class="slider-item-desc">You can find my articles and thoughts about C programming at dev to</div>
+              </div>
+            </div>
+            <div class="item slideritem2" style="--position:2;">
+              <div class="slider-item-container">
+                <div class="slider-item-title">Medium</div>
+                <div class="slider-item-img"><a href=""><img src="/resources/medium_logo_icon_189223.png" alt="" class="slider-item-imgsrc"></a></div>
+                <div class="slider-item-desc">You can find my articles and thoughts about C programming at dev to</div>
+              </div>
+            </div>
+            <div class="item slideritem3" style="--position:3;">
+              <div class="slider-item-container">
+                <div class="slider-item-title">GitHub</div>
+                <div class="slider-item-img"><a href=""><img src="/resources/github-logo_icon-icons.com_73546.png" alt="" class="slider-item-imgsrc"></a></div>
+                <div class="slider-item-desc">You can find my project about C programming and java on github</div>
+              </div>
+            </div>
+            <div class="item slideritem4" style="--position:4;">hello4</div>
+            <div class="item slideritem5" style="--position:5;">hello5</div>
           </div>
         </div>
         <!-- <div class="work-intro">
@@ -84,7 +102,20 @@
     </section>
 
     <section id="contact">
-      <h1>Contact Me!!</h1>
+      <div class="contact-container">
+        <div class="contact-title">CONTACT AND ABOUT</div>
+        <div class="about">I write technical articles on Dev.to and Medium, sharing insights on programming, Linux, and development. As a C & Java developer, I enjoy system-level programming and problem-solving. I’m active on Coderanch’s Java forums, helping others and deepening my expertise. 
+          My passion for Linux drives my interest in open-source contributions and low-level computing.
+        </div>
+        <div class="contact-sector">
+          <div class="caption">Lets Link Up</div>
+          <div class="icon-container">
+            <div class="icon"><img src="" alt="" class="img1"></div>
+            <div class="icon"><img src="" alt="" class="img2"></div>
+            <div class="icon"><img src="" alt="" class="img3"></div>
+          </div>
+        </div>
+      </div>
     </section>
   </div>
 
