finished-contact-content

--- a/html/index.html
+++ b/html/index.html
@@ -108,11 +108,12 @@
           My passion for Linux drives my interest in open-source contributions and low-level computing.
         </div>
         <div class="contact-sector">
-          <div class="caption">Lets Link Up</div>
+          <div class="caption">Lets Link Up!</div>
           <div class="icon-container">
-            <div class="icon"><img src="" alt="" class="img1"></div>
-            <div class="icon"><img src="" alt="" class="img2"></div>
-            <div class="icon"><img src="" alt="" class="img3"></div>
+            <div class="icon"><a href=""><img src="/resources/gmail.png" alt="" class="img1"></a></div>
+            <div class="icon"><a href=""><img src="/resources/linkedin (1).png" alt="" class="img1"></a></div>
+            <div class="icon"><a href=""><img src="/resources/icons8-whatsapp-128.png" alt="" class="img1"></a></div>
+            
           </div>
         </div>
       </div>
